ui: Fix overflow of exception text in message
- Without the change, the exception information formatted in <pre> overflows the
alert's boundaries and make a long line. With the change, it now sows a
horizontal scrollbar instead.

--- a/static/themes/default/css/main.css
+++ b/static/themes/default/css/main.css
@@ -320,6 +320,12 @@ html {
     margin-bottom: 2rem;
 }
 
+/* When an exception's text is shown in message as alert component, don't
+   overflow the alert's width. */
+.alert.d-flex div {
+    max-width: 100%;
+}
+
 /* Remove tag button */
 .tag-badge .remove-tag {
     background-color: transparent; /* Match the tag's background color */
